--- a/Views/Home/Nosotros.cshtml
+++ b/Views/Home/Nosotros.cshtml
@@ -42,7 +42,7 @@
     </div>
 
     <figure class="nosotros1__picture">
-        <img src="~/img/nosotros6.jpg" class="nosotros1__img">
+        <img src="~/img/nosotros.jpg" class="nosotros1__img">
     </figure>
 
 </section>
