--- a/Views/Catalogo/Catalogo.cshtml
+++ b/Views/Catalogo/Catalogo.cshtml
@@ -3,8 +3,8 @@
 @{
     ViewData["Title"] = "Catálogo";
 }
-<link rel="stylesheet" href="~/css/catalogo.css" />
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" integrity="sha512-1ycn6IcaQQ40/MKBW2W4Rhis/DbILU74C1vSrLJxCq57o941Ym01SwNsOMqvEBFlcgUa6xLiPY/NS5R+E6ztJQ==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+<link rel="stylesheet" href="~/css/catalogo.css" />
 
 <div class="container-fondo">
     <div class="fondo">
@@ -64,7 +64,7 @@
                     </div>
                     <form asp-action="" method="POST">
                         <input type="hidden" name="id" value="@producto.Id">
-                        <button asp-action ="Agregar" class="btn__cart">Añadir</button> <!--<i class="product__icon fas fa-cart-plus"></i>-->
+                        <button asp-controller="Proforma" asp-action="Buy" asp-route-id="@producto.Id" class="btn__cart">Añadir</button> <!--<i class="product__icon fas fa-cart-plus"></i>-->
                     </form>
                 </div>
             }
