--- a/wwwroot/css/receta.css
+++ b/wwwroot/css/receta.css
@@ -1,7 +1,8 @@
-@import url('https://fonts.googleapis.com/css2?family=Source+Code+Pro:wght@300&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Stick+No+Bills&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Righteous&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Cairo:wght@700&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Roboto+Mono&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Prompt:wght@400;600&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Lato&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300&display=swap');
 
 .container__receta{
     width: 80%;
@@ -172,4 +173,151 @@ textarea{
 
 textarea:focus {
     outline: none;
-    border-color: #fbcf34; }
+    border-color: #fbcf34; 
+}
+/*Pág recetas*/
+
+.receta-main-tittle{
+    text-align: center;
+}
+
+.container-recetas{
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+    grid-gap: 10px;
+}
+
+.recetas__img{
+    width: 100%;
+}
+
+/*Pág receta*/
+
+.contenedor__receta{
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    grid-gap: 20px;
+}
+
+.contenedor__img{
+    display: grid;
+    grid-template-areas:
+    ". a a ."
+    ". a a .";
+}
+
+.img__receta{
+    padding: 40px 40px;
+    width : 75%;
+    height: 100%;
+    grid-area: a;
+    align-self: right;
+    justify-self: right;
+}
+
+.contenedor__desc__receta{
+    padding: 40px 0;
+    width: 75%
+}
+
+.contenedor__ingredientes{
+    width: 40%;
+}
+
+/*Receta comentarios*/
+
+.title__comentario{
+    text-align: left;
+    font-family: 'Poppins', serif;
+}
+
+.btn__reseña{
+    text-align: center;
+    font-family: 'Poppins', serif;
+    background: #007175;
+    border: 0.5px solid #007175;
+    font-size: 18px;
+    border-radius: 100px;
+    padding: 10px 20px;
+    margin: 20px 50px 0;
+    color: #FFFFFF;
+}
+
+.btn__reseña:hover{
+    text-decoration: none;
+    color: #dce9e8;
+}
+
+ .font20{
+    font-size: 20px;
+    font-weight: 300;
+ }
+
+ .justificado{
+    text-align: justify;
+    text-justify: auto;
+ }
+
+ .checked{
+    color: yellow;
+ }
+
+ @media screen and (max-width: 800px) {
+    /*Pág receta*/
+
+    .reseña__cont{
+        font-size: 12px;
+    }
+
+    .contenedor__receta{
+        display: grid;
+        grid-template-columns: repeat(1, 1fr);
+        font-size: 15px;
+    }
+
+    .contenedor__img{
+        display: grid;
+        grid-template-areas:
+        ". a a ."
+        ". a a .";
+    }
+
+    .img__receta{
+        padding: 0px;
+        width : 90%;
+        height: 100%;
+        grid-area: a;
+        align-self: center;
+        justify-self: center;
+    }
+
+    .contenedor__desc__receta{
+        padding: 40px 0;
+        width: 75%
+    }
+
+    .contenedor__ingredientes{
+        width: 85%;
+    }
+
+    .title__comentario{
+        font-size: 20px;
+    }
+
+    .btn__conte{
+        padding: 20px 0;
+        height: 50%;
+    }
+
+    .btn__reseña{
+        text-align: center;
+        font-family: 'Poppins', serif;
+        background: #007175;
+        border: 0.5px solid #007175;
+        font-size: 10px;
+        border-radius: 100px;
+        padding: 10px 10px;
+        margin: 20px 10px;
+        color: #FFFFFF;
+    }
+}
