--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -294,6 +294,9 @@
         </section>
     </footer>
 }
+
+    <!-- Incluyendo .js de Culqi JS -->
+    
     <script src="~/js/menu.js"></script>
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
     <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
