--- a/Views/Proforma/Proforma.cshtml
+++ b/Views/Proforma/Proforma.cshtml
@@ -109,7 +109,7 @@
 
     <script>
 
-        var cc = @Json.Serialize(ViewBag.total);
+        var total = @Json.Serialize(ViewBag.total);
       paypal.Buttons({
         style: { 
             color: 'silver', 
@@ -122,7 +122,7 @@
           return actions.order.create({
             purchase_units: [{
               amount: {
-                value: cc
+                value: total
               }
             }]
           });
@@ -135,7 +135,7 @@
                 console.log('Capture result', orderData, JSON.stringify(orderData, null, 2));
                 var transaction = orderData.purchase_units[0].payments.captures[0];
                 alert('Transaction '+ transaction.status + ': ' + transaction.id + '\n\nSee console for all available details');
-                window.location.href = "/Orden/Aprobada";
+                window.location.href = "/Proforma/Aprobada"; //Redireccionar a la página de aprobación
           });
         }
       }).render('#paypal-button-container');
