--- a/wwwroot/css/catalogo.css
+++ b/wwwroot/css/catalogo.css
@@ -35,6 +35,7 @@ body{
     background-color: #22353C;
     color: #fff;
     transform: scale(1.082);
+    text-decoration: none;
 }
 
 .btn__cart:focus{
