--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -170,6 +170,9 @@
                 <li class="nav__items">
                     <a asp-area="" asp-controller="Proforma" asp-action="Proforma" class="nav__links">Carrito</a>
                 </li>
+                <li class="nav__items">
+                    <a  asp-controller="Customer" asp-action="MisPedidos" class="nav__links">Mis Pedidos</a>
+                </li>
                 <partial name="_LoginPartial"/>
                 <img src="~/img/close.svg" class="nav__close" alt="" >
             </ul>
