--- a/wwwroot/css/pdf.css
+++ b/wwwroot/css/pdf.css
@@ -2,7 +2,7 @@
 .pdf{
     border: 1px solid #000;
     border-radius: 10px;
-    padding: 30px;
+    padding: 30px 30px;
     height: 100%;
 }
 
@@ -28,10 +28,12 @@
     text-align: left;
     font-family: 'Noto Sans Mono', monospace;
     font-weight: 300;
+    font-size: 15px;
 }
 
 .table__body{
     text-align: left;
     font-family: 'Noto Sans Mono', monospace;
     font-weight: 300;
+    font-size: 15px;
 }
