Lista de Pedidos y detalle del pedido

--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -53,10 +53,10 @@
 
                 <div class="options__menu">	
 
-                    <a href="#" class="selected">
+                    <a asp-controller="Pedidos" asp-action="Pedidos" class="selected">
                         <div class="option">
                             <i class="fas fa-users" title="Clientes"></i>
-                            <h5>Clientes</h5>
+                            <h5>Pedidos</h5>
                         </div>
                     </a>
 
