agregar wsp instagram y facebook

--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -136,8 +136,9 @@
                     <div class="footer__section">
                         <h2 class="footer__title">Redes Sociales</h2>
                         <div>
-                            <i class="footer__iconsocial fab fa-facebook"></i>
-                            <i class="footer__iconsocial fab fa-instagram"></i>
+                            <a href="https://www.facebook.com/elhuertodelvalle" target="_blank"><i class="footer__iconsocial fab fa-facebook"></i></a>
+                            <a href="https://www.instagram.com/huertodelvalle/" target="_blank"><i class="footer__iconsocial fab fa-instagram"></i></a>
+                            <a href="https://api.whatsapp.com/send?phone=51922708667&text=" target="_blank"><i class="footer__iconsocial fab fa-whatsapp"></i></a>
                         </div>
                     </div>
                 </div>
@@ -224,8 +225,9 @@
             <div class="footer__section">
                 <h2 class="footer__title">Redes Sociales</h2>
                 <div>
-                    <i class="footer__iconsocial fab fa-facebook"></i>
-                    <i class="footer__iconsocial fab fa-instagram"></i>
+                    <a href="https://www.facebook.com/elhuertodelvalle" target="_blank"><i class="footer__iconsocial fab fa-facebook"></i></a>
+                    <a href="https://www.instagram.com/huertodelvalle/" target="_blank"><i class="footer__iconsocial fab fa-instagram"></i></a>
+                    <a href="https://api.whatsapp.com/send?phone=51922708667&text=" target="_blank"><i class="footer__iconsocial fab fa-whatsapp"></i></a>
                 </div>
             </div>
         </div>
@@ -295,8 +297,9 @@
             <div class="footer__section">
                 <h2 class="footer__title">Redes Sociales</h2>
                 <div>
-                    <i class="footer__iconsocial fab fa-facebook"></i>
-                    <i class="footer__iconsocial fab fa-instagram"></i>
+                    <a href="https://www.facebook.com/elhuertodelvalle" target="_blank"><i class="footer__iconsocial fab fa-facebook"></i></a>
+                    <a href="https://www.instagram.com/huertodelvalle/" target="_blank"><i class="footer__iconsocial fab fa-instagram"></i></a>
+                    <a href="https://api.whatsapp.com/send?phone=51922708667&text=" target="_blank"><i class="footer__iconsocial fab fa-whatsapp"></i></a>
                 </div>
             </div>
         </div>
