--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -88,6 +88,12 @@
                         </div>
                     </a>
 
+                    <a asp-controller="Home" asp-action="Feedback" title="Manage" class="selected">
+                        <div class="option" class="selected">
+                            <i class="fas fa-comment-dots" title="Feedback"></i>
+                            <h5>Feedback</h5>
+                        </div>
+                    </a>
                     <a asp-area="Identity" asp-page="/Account/Manage/Index" title="Manage" class="selected">
                         <div class="option" class="selected">
                             <i class="far fa-address-card" title="Perfil"></i>
