--- a/Areas/Identity/Pages/Account/Register.cshtml
+++ b/Areas/Identity/Pages/Account/Register.cshtml
@@ -21,7 +21,7 @@
                         <div class="heading">
                             <h2>Regístrese</h2>
                             <h6>¿Ya tiene una cuenta? </h6>
-                            <a asp-page="./Login" class="toggle">Sign in</a>
+                            <a asp-page="./Login" class="toggle">Inicie Sesión</a>
                         </div>
 
                         <div class="actual-form">
