--- a/Views/Receta/AdministrarReceta.cshtml
+++ b/Views/Receta/AdministrarReceta.cshtml
@@ -9,7 +9,7 @@
 <div class="container">
     <br>
     <div class="btn__section">
-        <a asp-action="RegistrarReceta" class="btn__add__receta">Registrar Receta</a>
+        <a asp-action="RegistrarReceta" class="btn__add__receta">Agregar Receta</a>
     </div>
     <br>
     <table class="table__receta">
