--- a/Views/Receta/RegistrarReceta.cshtml
+++ b/Views/Receta/RegistrarReceta.cshtml
@@ -45,7 +45,7 @@
                 </div>
 
                 <div class="form-list__row">
-                    <button class="btn__add__receta">Registrar Receta</button>
+                    <button class="btn__add__receta">Agregar</button>
                     <a asp-action="AdministrarReceta"  class="btn__volver" >Volver</a>
                 </div>
             </form>
