--- a/Views/Receta/EditarReceta.cshtml
+++ b/Views/Receta/EditarReceta.cshtml
@@ -8,7 +8,7 @@
 <div class="container__receta">
     <div class="card">
         <div class="card-body">
-            <h3 class="form-title">Registrar Receta</h3>
+            <h3 class="form-title">Editar Receta</h3>
 
             <form asp-action="EditarReceta" method="POST" class="form-list">
 
@@ -45,7 +45,7 @@
                 </div>
 
                 <div class="form-list__row">
-                    <button class="btn__add__receta">Editar Receta</button>
+                    <button class="btn__add__receta">Actualizar Receta</button>
                     <a asp-action="AdministrarReceta"  class="btn__volver" >Volver</a>
                 </div>
             </form>
